--- a/style.css
+++ b/style.css
@@ -1,193 +1,299 @@
-body{
-    margin: 0;
-    background-color: rgb(240, 240, 240);
+body {
+    margin: 0px;
+    font-family: 'Roboto', sans-serif;
+    background-color: rgb(92, 79, 68);
+    color: white;
 }
-footer{
-    height: 100px;
-    width: 100%;
-    background-color: white;
-    position: fixed;
-    position: absolute;
-    z-index: 50;
+.d-flex {
     display: flex;
+}
+
+.d-none {
+    display: none;
+}
+
+.f-wrap {
+    flex-wrap: wrap;
+}
+
+.dir-col {
+    flex-direction: column;
+}
+.j-sp-btw {
+    justify-content: space-between;
+}
+.j-center {
+    justify-content: center;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.align-start {
+    align-items: flex-start;
+}
+
+.container {
+
+    height: 100%;
+}
+
+.movieCard {
+    display: flex;
+    width: 500px;
+    height: 360px;
+    border-radius: 50px;
+    border: solid black 5px;
+    margin: 5px;
+    border-radius: 5px;
+    background-color: rgb(95, 88, 88);
+    overflow: hidden;
+}
+.poster {
+    height: 100%;
+    width: 50%;
+}
+.poster img {
+    width: 100%;
+}
+
+.infoSide {
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    height: 100%;
+    width: 50%;
 }
-
-footer h3{
-    margin: 20px;
-}
-
-footer h3:hover{
-    cursor: pointer;
-    color: rgb(145, 0, 0);
-}
-
-#intro{
-    height: 100vh;
-    width: 100%;
-    background-color: rgb(94, 82, 82);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-#shopNowButton{
-    width: 200px;
-    height: 50px;
+.title {
+    margin-top: 10px;
+    text-align: center;
     font-size: 20px;
-    background-color: orange;
-    color: white;
-    transition: 0.5s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+}
+.year {
+    font-weight: 200;
+    font-size: 18px;
+    text-align: center;
+    margin: 0px;
 }
 
-#shopNowButton:hover{
+.rating {
+    text-align: center;
+    font-size: 16px;
+    padding: 2px 5px;
+    margin: 10px;
+    color: black;
+    border-radius: 3px;
+    background-color: rgb(190, 151, 22);
+}
+
+.comments {
+    text-align: center;
+    margin: 0px;
+    font-size: 16px;
+    color: lightgray;
+    font-weight: 300;
+}
+.enter {
+    width: 100%;
+    font-size: 18px;
+    background-color: rgb(51, 51, 51);
+    color: lightgray;
+    text-align: center;
+    padding: 5px 0px;
+    font-weight: 600;
+}
+.enter:hover {
+    cursor: pointer;
+    color: white;
+    background-color: black;
+}
+
+.movie {
+    margin: 20px;
+    display: none;
+}
+
+.infoPoster {
+    height: 350px;
+    
+}
+
+.infoPoster img {
+    height: 100%;
+}
+
+.movieInfo {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.titleBig {
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 10px;
+
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: rgb(80, 80, 80);
+}
+
+.yearBig {
+    
+    font-size: 18px;
+    margin: 10px;
+    padding: 5px 10px;
+    background-color: rgb(70, 70, 70);
+    border-radius: 20px;
+}
+
+.ratingBig {
+    text-align: center;
+    font-size: 16px;
+    padding: 2px 5px;
+    font-weight: 600;
+    margin: 10px;
+    color: black;
+    border-radius: 10px;
+    background-color: rgb(190, 151, 22);
+}
+
+.ratingStars {
+    letter-spacing: 5px;
+    margin-bottom: 20px;
+    color: rgb(190, 151, 22);
+}
+
+.description {
+    font-weight: 300;
+    color: lightgray;
+    margin-bottom: 20px;
+}
+
+.commentSection {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.newComment {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.nameInput {
+    padding: 5px;
+    width: 150px;
+    margin-bottom: 10px;
+}
+
+#inputText {
+    padding: 5px;
+}
+
+.submitBtn {
+    margin-top: 10px;
+}
+
+.btn {
+    padding: 5px;
+    border: 2px solid white;
+    margin: 10px;
+    transition: 0.2s;
+}
+.btn:hover {
     cursor: pointer;
     background-color: white;
-    color: orange;
+    color: black;
 }
 
-#main{
-    display: none;
-    padding-top: 70px;
+.commentCard {
+    border: 1px solid gray;
+    font-weight: 300;
+    padding: 20px;
     width: 100%;
+    box-sizing: border-box;
+    margin: 5px 0px;
+    position: relative;
 }
-
-.grid{
-    width: 100%;
-    padding-top: 100px;
-    display: grid;
-    overflow: hidden;
-    grid-template-columns: repeat(auto-fill, 33.333333333%);
+.comentName {
+    margin-bottom: 10px;
+    color: rgb(128, 154, 240);
 }
-
-.container{
-    height: 500px;
-    transition: 0.5s;
-    z-index: 50;
+.commentRemove {
+    position: absolute;
+    top: 10px;
+    font-size: 12px;
+    right: 10px;
 }
-
-.container #cluster{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.firstPicture{
-    width: 100%px;
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-}
-
-.container:hover{
+.commentRemove:hover {
     cursor: pointer;
-    transform: scale(1.2);
+    color: salmon;
 }
 
-
-#productPage{
+.commentList {
     width: 100%;
-    height: 100vh;
-    display: none;
 }
 
-#imageSide{
-    background-color:  rgb(206, 206, 206);
-}
-
-
-.grid2{
+.addModal {
+    position: fixed;
+    top: 0px;
     height: 100%;
     width: 100%;
-    display: grid;
-    grid-template-columns: 50% 50%;
+    background-color: rgba(0, 0, 0, 0.432);
 }
 
-.grid section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.nameNStuff{
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    top: 200px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.nameNStuff h1{
-    font-size: 60px;
-    height: 50px;
-}
-
-.nameNStuff h2{
-    font-size: 40px;
-    color: tomato;
-}
-
-.backButton{
-    background-color: grey;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    right: 50px;
-    top: 150px;
-    transition: 0.5s;
-}
-
-.backButton:hover{
-    cursor: pointer;
-    background-color: rgb(126, 46, 46);
-}
-
-h5{
-    height: 300px;
+.modal {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
     width: 300px;
-    font-size: 19px;
 }
 
-.grid2 section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.modal h2 {
+    color: black;
 }
 
-#addToCartButton{
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
-    background-color: tomato;
+.modal input {
+    margin: 5px 0px;
+    padding: 10px;
+    font-size: 15px;
+}
+
+.addBtn {
+    background-color: rgb(105, 169, 230);
     color: white;
-    transition: 0.5s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 10px 30px;
+    border-radius: 0px;
+    transition: 0.2s;
 }
 
-#addToCartButton:hover{
+.addBtn:hover {
+    background-color: lightblue;
     cursor: pointer;
-    background-color: orange;
+    color: black;
 }
 
-#cartScreen{
-    width: 100%;
-    padding-top: 100px;
-    display: grid;
-    overflow: hidden;
-    grid-template-columns: repeat(auto-fill, 33.333333333%);
-    display: none;
+.cancelBtn {
+    background-color: rgb(196, 196, 196);
+    color: black;
+    padding: 10px 10px;
+    border-radius: 0px;
+    transition: 0.2s;
 }
+.cancelBtn:hover {
+    background-color: rgb(161, 161, 161);
+    cursor: pointer;
+}
+
+
+
